<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stude</string>
    <string name="action_settings">Settings</string>
    <string name="bParam">Parameter</string>
    <string name="bList">Lists</string>
    <string name="word">Word :</string>
    <string name="desc">Description :</string>
    <string name="title_activity_list_management">ListManagement</string>
    <string name="titreListe">Lists :</string>
    <string name="bStart">Start</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="del">Delete</string>
    <string name="title_activity_add_list">AddList</string>
    <string name="nameList">List name :</string>
    <string name="bVal">Ok</string>
    <string name="bCancel">Cancel</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_add_word">AddWord</string>
    <string name="title_activity_lists_management">ListsManagement</string>
    <string name="title_activity_start">Start</string>

</resources>
