<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvListName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="db list name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/lvWords"
        android:layout_width="match_parent"
        android:layout_height="222dp"
        android:layout_marginTop="@dimen/activity_vertical_margin" >

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bAddWord"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:text="@string/add" />

        <Button
            android:id="@+id/bModifWord"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:text="@string/edit" />

        <Button
            android:id="@+id/bDelWord"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:text="@string/del" />

    </LinearLayout>

    <Button
        android:id="@+id/bStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/bStart" />

</LinearLayout>